@@ -1,6 +1,20 @@
 #!/bin/sh
+# Run this to generate all the initial makefiles, etc.
 
-aclocal -I m4
-autoheader
-automake --add-missing
-autoconf
+srcdir=`dirname $0`
+test -z "$srcdir" && srcdir=.
+
+PKG_NAME="gtetrinet"
+
+(test -f $srcdir/configure.in) || {
+    echo -n "**Error**: Directory "\`$srcdir\'" does not look like the"
+    echo " top-level $PKG_NAME directory"
+    exit 1
+}
+
+which gnome-autogen.sh || {
+	echo "You need to install gnome-common from the GNOME CVS"
+	exit 1
+}
+
+USE_GNOME2_MACROS=1 . gnome-autogen.sh
